--- a/Meta.tex
+++ b/Meta.tex
@@ -1,21 +1,21 @@
 % !TEX root = Projektdokumentation.tex
 
 % Hinweis: der Titel muss zum Inhalt des Projekts passen und den zentralen Inhalt des Projekts deutlich herausstellen
-\newcommand{\titel}{Entwicklung von NatInfo}
-\newcommand{\untertitel}{Webbasiertes Tool zur Unterstützung der Entwickler}
+\newcommand{\titel}{TYPO3 Fileuploader}
+\newcommand{\untertitel}{TYPO3-Extension zur Verwaltung von asynchronen Datei-Uploads}
 \newcommand{\kompletterTitel}{\titel{} -- \untertitel}
 
-\newcommand{\autorName}{Stefan Macke}
-\newcommand{\autorAnschrift}{Meine Straße 1}
-\newcommand{\autorOrt}{49377 Vechta}
+\newcommand{\autorName}{Fabian Michael}
+\newcommand{\autorAnschrift}{Adlerstraße 75}
+\newcommand{\autorOrt}{14612 Falkensee}
 
-\newcommand{\betriebLogo}{LogoBetrieb.pdf}
-\newcommand{\betriebName}{\textsc{Alte Oldenburger} Krankenversicherung AG}
-\newcommand{\betriebAnschrift}{Theodor-Heuss-Str. 96}
-\newcommand{\betriebOrt}{49377 Vechta}
+\newcommand{\betriebLogo}{form4Logo.png}
+\newcommand{\betriebName}{form4 GmbH \& Co. KG}
+\newcommand{\betriebAnschrift}{Schlesische Straße 26}
+\newcommand{\betriebOrt}{10997 Berlin}
 
 \newcommand{\ausbildungsberuf}{Fachinformatiker für Anwendungsentwicklung}
 \newcommand{\betreff}{Dokumentation zur betrieblichen Projektarbeit}
-\newcommand{\pruefungstermin}{Sommer 2015}
-\newcommand{\abgabeOrt}{Vechta}
+\newcommand{\pruefungstermin}{Winter 2020}
+\newcommand{\abgabeOrt}{Berlin}
 \newcommand{\abgabeTermin}{23.04.2015}
