--- a/Inhalt/Analysephase.tex
+++ b/Inhalt/Analysephase.tex
@@ -5,10 +5,12 @@
 
 \subsection{Ist-Analyse} 
 \label{sec:IstAnalyse}
-\begin{itemize}
-	\item Wie ist die bisherige Situation (\zB bestehende Programme, Wünsche der Mitarbeiter)?
-	\item Was gilt es zu erstellen/verbessern?
-\end{itemize}
+
+Im Rahmen mehrerer Kundenprojekte wurden bereits verschiedene Tools, sowohl OpenSource als auch kommerziell, für das Hochladen von Dateien evaluiert und eingesetzt. Sowohl Backend- als auch Frontendseitig hat sich bisher allerdings keine zufriedenstellende Lösung ergeben. Gründe gehen von fehlenden Features bis unzureichenden Dokumentationen, unregelmäßige Wartungen und schlechte Anpassbarkeit im Backend und Frontend. 
+
+Backendseitig ist meist auch die Integration in das TYPO3 Ökosystem sehr aufwändig oder muss jedes Mal neu entwickelt werden, was zusätzliche Arbeit und kosten bedeutet. Dazu kommen Security Issues und mangelnde Umsetzung der PSR-Standards.  
+
+Frontendseitig haben sich die bisher getesteten Tools als sehr konfigurationslastig und schlecht anpassbar herausgestellt. Zudem erfolgt die Konfiguration von Backend und Frontend getrennt, was Redundanzen verursacht und zu Inkonsistenzen führen kann. 
 
 
 \subsection{Wirtschaftlichkeitsanalyse}
