--- a/Inhalt/Entwurfsphase.tex
+++ b/Inhalt/Entwurfsphase.tex
@@ -47,11 +47,10 @@ Die Extension soll sowohl unter TYPO3 8.7 als auch unter 9.5 und 10.4 Lauffähig
 
 \tabelle{Entscheidungsmatrix Module Bundler}{tab:Entscheidungsmatrix}{Nutzwert.tex}
 
-\paragraph{Typescript} Der Source Code wurde vollständig in TypeScript geschrieben. Dadurch ist Typensicherheit gewährleistet und es werden schon im Vorfeld viele Fehlerquellen eliminiert. Außerdem ermöglicht TypeScript, sinnvolle und automatische Code-Vorschläge in der IDE. 
-Mittels eines Plugins für Rollup wird das TypeScript dann in JavaScript transpiled. TypeScript wurde für das Projekt so konfiguriert, dass ECMAScript 5 konforme JavaScript-Syntax erzeugt wird (Ohne Polyfills). Obwohl dies eigentlich Aufgabe von Babel wäre, ergibt sich dadurch aber am Ende ein kleineres Bundle.
+\paragraph{Typescript} Der Source Code wurde vollständig in TypeScript geschrieben. TypeScript ist eine Programmiersprache entwickelt von Microsoft und bilet eine Obermenge von JavaScript. TypeScript ermöglicht statische Typen währen der Entwicklung zu verwenden. Dadurch ist Typensicherheit gewährleistet und es werden schon im Vorfeld viele Fehlerquellen eliminiert, da die IDE und der TypeScript-(Trans)compiler darauf hinweisen. Außerdem ermöglicht TypeScript, sinnvolle und automatische Code-Vorschläge in der IDE. 
+Mittels eines Plugins für Rollup, das den TypeScript-(Trans)compiler aufruft, wird der TypeScript-Code dann in reines JavaScript transpiled. TypeScript wurde für das Projekt so konfiguriert, dass ECMAScript (ES) 5 konforme JavaScript-Syntax (!) erzeugt wird (Ohne Polyfills). Dafür ist zawr normalerweise auch Babel zuständig, es hat sich aber ergeben, dass das Bundle so am Ende kleiner ist, da der TypeScript compiler weniger Overhead erzeugt und den Code einfach hält.
 
-\paragraph{Babel} Babel ist ein Transpiler der JavaScript Code und Syntaxt transformieren kann. Dafür gibt es allerhand Plugins, die diese Transformationen vornehmen. Darüber hinaus gibt es Presets, also Zusammenschlüsse aus Plugins und Einstellungen. Eines davon ist das Preset \textbf{@babel/preset-env}. Dieses smarte Preset transformiert den Source Code anhand von einer sog. Browserslist Konfiguration. In dieser wird festgelegt, mit welchen Browsern der Code kompatibel sein muss. Neben reiner Syntax erkennt das Preset außerdem, wenn Featuers verwendet wurden, die nicht von allen Browsern aus der Browserslist Konfiguration unterstützt werden und importiert automatisch die entsprechenden sog. Polyfills - also Third-Party Implementierungen - aus dem Open Source Projekt \textbf{core-js}, die anstelle treten, wenn ein Browser diese Features nicht nativ unterstützt. Die Browserslist für dieses Projekt wurde auf default festgelegt, also alle relevanten Browser am Markt. Das schließt aktuell Browser wie den Internet Explorer 11 noch mit ein, was Teil der Anforderungen ist.
-
+\paragraph{Babel} Babel ist ebenfalls ein Transcompiler, oft auch Transpiler genannt, der JavaScript transformieren kann. Babel wird hauptsächlich dafür verwendet modernen JavaScript-Code so zu transformieren, dass dieser auch mit älteren Browsern kompatibel ist. Dafür gibt es allerhand Plugins, die diese Transformationen vornehmen. Darüber hinaus gibt es Presets, also Zusammenschlüsse aus Plugins und vordefinierten Einstellungen. Eines davon ist das Preset \textbf{@babel/preset-env}, das in diesem Projekt zum Einsatz kommt. Für dieses Preset wird eine sog. Browserslist-Konfiguration definiert. In dieser wird festgelegt, mit welchen Browsern der Code am Ende kompatibel sein muss. Neben reinen syntaktischen Features, wie z.B. Pfeil-Funktionen, erkennt dieses Preset außerdem, wenn Code-Featuers verwendet wurden, die nicht von allen Browsern aus der Browserslist Konfiguration unterstützt werden und importiert automatisch die entsprechenden sog. Polyfills - also Third-Party Implementierungen der Features - aus dem Open Source Projekt \textbf{core-js}. Diese Polyfills treten dann automatisch in Kraft, wenn ein Browser diese Features nicht nativ unterstützt. Z.B. die in der ES6-Spezifikation (oft auch ES 2015 bezeichnet) definierten Array-Funktionen, mit denen man auf funktionale Art mit Arrays umgehen kann oder die ebenfalls mit ES6 eingeführten sog. Promises, mit denen die Arbeit mit asynchronen Operationen sehr vereinfacht wird. Die Browserslist für dieses Projekt wurde so konfiguriert, dass alle relevanten Browser, die sich derzeit am Markt befinden unterstützt werden. Das schließt Browser wie den Internet Explorer 11  mit ein, was Teil der Anforderungen ist. 
 
 
 \subsection{Geschäftslogik}
