--- a/Inhalt/Einleitung.tex
+++ b/Inhalt/Einleitung.tex
@@ -5,18 +5,24 @@
 
 \subsection{Projektumfeld} 
 \label{sec:Projektumfeld}
-\begin{itemize}
-	\item Kurze Vorstellung des Ausbildungsbetriebs (Geschäftsfeld, Mitarbeiterzahl \usw)
-	\item Wer ist Auftraggeber/Kunde des Projekts?
-\end{itemize}
+1996 als Internetagentur gegründet hat die form4 GmbH \& Co. KG sich zu einem Softwareunternehmen entwickelt. Die Schwerpunkte liegen auf der Herstellung von Websites und Portalen sowie der Realisierung individueller, webbasierter Softwarelösungen für mittelständische Unternehmen und Organisationen. Das Unternehmen setzt sich aus zwei Abteilungen - hier als Units bezeichnet - zusammen. Der Web-Unit und der Enterprise-Unit. Der Auftraggeber dieses Projekts ist der Fachbereich TYPO3 aus der Web-Unit.
+
+\paragraph{Die Web-Unit}
+Schwerpunkt der Webunit ist die technische Umsetzung von Websites und Portalen im öffentlich zugänglichen Bereich. Hierunter fallen auch Community- und eCommerce-Lösungen.
+
+Kerntechnologien sind hierbei PHP, HTML, CSS und JavaScript.
+
+Die meisten von der Webunit realisierten Projekte basieren auf leistungsfähigen Content Management Systemen wie TYPO3 oder Drupal.
+
+\paragraph{Die Enterprise-Unit}
+Die Enterprise-Unit beschäftigt sich in erster Linie mit javabasierten Softwaresystemen. Das beinhaltet Intranet- und Unternehmensportale wie auch klassische individuelle datenverwaltende Software und Workflowsysteme.
 
 
 \subsection{Projektziel} 
 \label{sec:Projektziel}
-\begin{itemize}
-	\item Worum geht es eigentlich?
-	\item Was soll erreicht werden?
-\end{itemize}
+Ziel des Projektes ist die Entwicklung einer TYPO3-Extension bestehend aus Backend und Frontend. Diese Extension soll produktiv in Kundenprojekten zum Einsatz kommen und bestehende Implementierungen ablösen. Dadurch sollen Entwickler zukünftig entlastet werden und eine einfache und einheitliche Lösung zur Verwaltung von Datei-Uploads geschaffen werden. 
+
+Des Weiteren soll die Extension in das öffentliche TYPO3 Extension Repository (im Folgenden mit TER abgekürzt) deployed und der Source-Code als OpenSource Repository auf GitHub veröffentlicht werden. 
 
 
 \subsection{Projektbegründung} 
