--- a/Allgemein/Seitenstil.tex
+++ b/Allgemein/Seitenstil.tex
@@ -25,7 +25,7 @@
 %\setheadwidth[0pt]{textwithmarginpar} % Kopfzeile über den Text hinaus verbreitern (falls Logo den Text überdeckt)
 
 % Fußzeile
-\ifoot{\autorName}
+\ifoot{© \autorName}
 \cfoot{}
 \ofoot{\pagemark}
 
