--- a/Inhalt/Entwurfsphase.tex
+++ b/Inhalt/Entwurfsphase.tex
@@ -14,7 +14,7 @@ Die Extension soll sowohl unter TYPO3 8.7 als auch unter 9.5 und 10.4 Lauffähig
 \subsubsection{Backend}
 \label{sec:Backend}
 
-\paragraph{Die Configuration Registry} Die Configuration Registry ist eine Singleton-Klasse, die für die Verwaltung von Konfigurationen zuständig ist. Konfigurationen werden mittels eines eindeutigen Keys registriert und bestehen aus mehreren Unterkonfigurationen, welche ebenfalls einen eindeutigen Key besitzen. In einer Unterkonfiguration können entsprechende Einstellungen gesetzt werden und ein sog. Processor definiert werden bzw. dessen Klassenname. Außerdem kann ein Flag gesetzt werden, falls eine Unterkonfiguration nur für das Backend relevant ist und nicht an das Frontend übergeben werden soll. Damit hat eine Konfiguration letztlich folgende Struktur:
+\paragraph{Die Configuration Registry} Die Verwaltung von Konfiguration soll zentral geschehen. Dafür solleine Configuration Registry als Singleton implementiert werden. Konfigurationen sollen mittels eines eindeutigen Keys registriert werden und aus  aus mehreren Unterkonfigurationen bestehen, welche ebenfalls einen eindeutigen Key besitzen. In einer Unterkonfiguration sollen entsprechende Einstellungen vorgenommen werden und ein sog. Processor definiert werden. Soll eine Unterkonfiguration nur für das Backend relevant sein, wie z.B. ein Processor, der für das Verschieben der Dateien auf dem Server verantwortlich ist, muss dafür ein entsprechendes Flag gesetzt werden können. 
 
 \pagebreak
 
@@ -26,32 +26,42 @@ Die Extension soll sowohl unter TYPO3 8.7 als auch unter 9.5 und 10.4 Lauffähig
 \label{fig:beispiel_konfiguration}
 \end{figure}
 
-\paragraph{Die Processors} Die Verarbeitung der Dateien geschieht in den zuvor genannten Processors. Diese bestehen aus drei Hooks: onPreload, onUpload und onValidate.
+\paragraph{Die Processors} Die Verarbeitung und Validierung der Dateien soll in den zuvor genannten Processors geschehen. Diese sollen folgende Schnittstellen zur Verfügung stellen:
 
 \begin{itemize}
-	\item onPreload 	– Mit diesem hook können Dateien für das Preloading vorbereitet werden. Z.B. Thumbnail erzeugen etc.
+	\item onPreload 	– Mit diesem Hook können Dateien für das Preloading vorbereitet werden. Z.B. Thumbnail erzeugen etc.
 	\item onUpload 		– Hier werden die Dateien verarbeitet, die vom User hochgeladen werden. Z.B. Validierung der Dateigröße, Thumbnail erzeugen etc.
 	\item onValidate	- Dieser Hook dient zur abschließenden Validierung. Z.B. wenn ein Formular submitted wird.
 \end{itemize}
 
-\paragraph{Der Ajax Handler} Im Backend wurde als Einstiegspunkt ein Ajax-Handler mit einer Handler-Funktion implementiert. Dafür wurde im TypoScript ein Seitentyp definiert, mittels dem diese Handler-Funktion als userFunc aufgerufen wird, sobald an diesen Seitentyp ein HTTP-Request ankommt. Der Ajax-Handler lädt dann die entsprechende Konfiguration aus der Registry und führt eine entsprechende Fuktion eines Services aus. Dafür muss ihm mitgeteilt werden welche Aktion er ausführen soll. Es gibt die Aktionen Upload und Remove.
+Ziel dieser herangehensweise ist es, dass das Validieren und Verarbeiten der Dateien möglichst modular ist.
 
-\paragraph{Der Service} Der Service bildet die Zentrale anlaufstelle und stellt mehrere Funktionen zur verfügung. Er ist für die Verarbeitung und die Integritätssicherung der Daten zuständig. Er führt die entsprechenden Hooks der Processors aus und liefert daraufhin ein Ergebnis. Zur Integritätssicherung berechnet der Service eine Prüfsumme und stellt eine Funktion zur Validierung bereit.
-
+\paragraph{Der Service} Als zentrale Anlaufstelle soll ein Service dienen der für die Verarbeitung und die Integritätssicherung der Daten zuständig ist. Er soll die entsprechenden Hooks der Processors ausführen. Zur Integritätssicherung soll er eine Prüfsumme berechnen und diese an das Frontend senden.
 
 \subsubsection{Frontend}
 \label{sec:Frontend}
 
-\paragraph{Module Bundler} Für das Frontend stellte sich zunächst die Frage, mit welchem Build-Tool bzw. Bundler das JavaScript transpiled und gebundled werden soll. Zu den drei relevantesten bundlern zählen Webpack, Parcel und Rollup.
-% TODO
+\paragraph{Module Bundler} Für das Frontend stellte sich zunächst die Frage, mit welchem Build-Tool bzw. Bundler das JavaScript transpiled und gebundled werden soll. Ein Module-Bundler löst Modul-Abhängigkeiten auf und vereint alles in einem einzigen sog. Bundle. Er führt außerdem Optimierungen, wie z.B. das sog. Tree-Shaking oder auch Dead Code Elimination gennant, durch. Zu den drei relevantesten bundlern zählen Webpack, Parcel und Rollup. Alle drei sind hervorragende Tools, die ihre Stärken und Schwächen haben. Nach der Nutzwertanalyse fiel die Entscheidung für das Projekt auf Rollup. Mit Rollup wurde das beste Ergebnis erzielt. Es ist hervorragend für diesen Zweck geeignet. Die Bundle-Größe ist zwar im Gegensatz zu Parcel etwas größer, allerdings ist dies vertretbar und die Vorteile überwiegen. Mit Rollup können sehr einfach unterschiedliche Bundles erzeugt werden, wie ein statisches Bundle, das in einer Website als statische Datei eingebunden werden kann und ein Bundle, das als Modul in ein anderes importiert werden kann. Auch in den anderen Punkten konnte Rollup überzeugen. Es ist sehr gut dokumentiert, es ist einfach konfigurierbar und sehr wichtig ist außerdem, dass, wenn das Bundle als statische Datei in ein Projekt eingebunden wird, die IDE den Code so gut es geht nachvollziehen und vervollständigen kann. Das ist mit Rollup ohne Probleme möglich. Mit Webpack war dies nicht gut möglich und mit Parcel war dies fast gar nicht möglich. 
 
 \tabelle{Entscheidungsmatrix Module Bundler}{tab:Entscheidungsmatrix}{Nutzwert.tex}
 
-\paragraph{Typescript} Der Source Code wurde vollständig in TypeScript geschrieben. TypeScript ist eine Programmiersprache entwickelt von Microsoft und bilet eine Obermenge zu JavaScript. TypeScript ermöglicht statische Typen währen der Entwicklung zu verwenden. Dadurch ist Typensicherheit gewährleistet und es werden schon im Vorfeld viele Fehlerquellen eliminiert, da die IDE und der TypeScript-(Trans)compiler darauf hinweisen. Außerdem ermöglicht TypeScript, sinnvolle und automatische Code-Vorschläge in der IDE. 
-Mittels eines Plugins für Rollup, das den TypeScript-(Trans)compiler aufruft, wird der TypeScript-Code dann in reines JavaScript transpiled. TypeScript wurde für das Projekt so konfiguriert, dass ECMAScript (ES) 5 konforme JavaScript-Syntax (!) erzeugt wird (Ohne Polyfills). Dafür ist zawr normalerweise auch Babel zuständig, es hat sich aber ergeben, dass das Bundle so am Ende kleiner ist, da der TypeScript compiler weniger Overhead erzeugt und den Code einfach hält.
+\paragraph{Typescript} Der Source Code soll vollständig in TypeScript geschrieben werden. TypeScript ist eine Programmiersprache entwickelt von Microsoft und bilet eine Übermenge zu JavaScript. Es fügt statische Typen zu JavaScript hinzu. Dadurch ist Typensicherheit gewährleistet und werden schon im Vorfeld viele potenzielle Fehlerquellen eliminiert, da die IDE und der TypeScript-(Trans)compiler darauf hinweisen. Außerdem ermöglicht TypeScript, sinnvolle und automatische Code-Vorschläge in der IDE. 
+Mittels eines Plugins für Rollup, das den TypeScript-(Trans)compiler aufruft, wird der TypeScript-Code dann in reines JavaScript transpiled. 
 
-\paragraph{Babel} Babel ist ebenfalls ein Transcompiler, oft auch Transpiler genannt, der JavaScript transformieren kann. Babel wird hauptsächlich dafür verwendet modernen JavaScript-Code so zu transformieren, dass dieser auch mit älteren Browsern kompatibel ist. Dafür gibt es allerhand Plugins, die diese Transformationen vornehmen. Darüber hinaus gibt es Presets, also Zusammenschlüsse aus Plugins und vordefinierten Einstellungen. Eines davon ist das Preset \textbf{@babel/preset-env}, das in diesem Projekt zum Einsatz kommt. Für dieses Preset wird eine sog. Browserslist-Konfiguration definiert. In dieser wird festgelegt, mit welchen Browsern der Code am Ende kompatibel sein muss. Neben reinen syntaktischen Features, wie z.B. Pfeil-Funktionen, async/await etc., erkennt dieses Preset außerdem, wenn Code-Featuers verwendet wurden, die nicht von allen Browsern aus der Browserslist Konfiguration unterstützt werden und importiert automatisch die entsprechenden sog. Polyfills - also Third-Party Implementierungen der Features - aus dem Open Source Projekt \textbf{core-js}. Diese Polyfills treten dann automatisch in Kraft, wenn ein Browser diese Features nicht nativ unterstützt. Z.B. die mit der ES6-Spezifikation (oft auch ES 2015 bezeichnet) eingeführten Array-Funktionen, mit denen man auf funktionale Art mit Arrays umgehen kann oder die ebenfalls mit ES6 eingeführten sog. Promises, mit denen die Arbeit mit asynchronen Operationen sehr vereinfacht wird. Die Browserslist für dieses Projekt wurde so konfiguriert, dass alle relevanten Browser, die sich derzeit am Markt befinden unterstützt werden. Das schließt Browser wie den Internet Explorer 11  mit ein, was Teil der Anforderungen ist. 
+\paragraph{Babel} Babel ist ebenfalls ein Transcompiler, oft auch Transpiler genannt, der JavaScript transformieren kann. Babel wird hauptsächlich dafür verwendet modernen JavaScript-Code so zu transformieren, dass dieser auch mit älteren Browsern kompatibel ist. Dafür gibt es allerhand Plugins, die diese Transformationen vornehmen. Darüber hinaus gibt es Presets, also Zusammenschlüsse aus Plugins und vordefinierten Einstellungen. Eines davon ist das Preset \textbf{@babel/preset-env}, das in diesem Projekt zum Einsatz kommen soll. Für dieses Preset wird eine sog. Browserslist-Konfiguration definiert. In dieser wird festgelegt, mit welchen Browsern der Code am Ende kompatibel sein muss. Neben reinen syntaktischen Features, wie z.B. Pfeil-Funktionen, async/await etc., erkennt dieses Preset außerdem, wenn Code-Featuers verwendet wurden, die nicht von allen Browsern aus der Browserslist Konfiguration unterstützt werden und importiert automatisch die entsprechenden sog. Polyfills - also Third-Party Implementierungen der Features - aus dem Open Source Projekt \textbf{core-js}. Diese Polyfills treten dann automatisch in Kraft, wenn ein Browser diese Features nicht nativ unterstützt. Z.B. die mit der ES6-Spezifikation (oft auch ES 2015 bezeichnet) eingeführten Array-Funktionen, mit denen man auf funktionale Art mit Arrays umgehen kann oder die ebenfalls mit ES6 eingeführten sog. Promises, mit denen die Arbeit mit asynchronen Operationen sehr vereinfacht wird. Die Browserslist soll so konfiguriert werden, dass alle relevanten Browser, die sich derzeit am Markt befinden unterstützt werden. Das schließt ältere Browser wie den Internet Explorer 11 mit ein, was Teil der Anforderungen ist. 
 
+\paragraph{Die Processors} Auch im Frontend soll die Validierung und Verarbeitun mittels Processors geschehen. Processors sollen global in einer Registry registriert werden können. Dafür muss eine API zur verfügung gestellt werden. Processors sollen aus den folgenden vier Hooks bestehen: onPreload, beforeUpload, afterUpload und onValidate.
+
+\begin{itemize}
+	\item onPreload 	– Dieser Hook ist ebenfall für das Vorbereiten des Preloadings verantwortlich
+	\item beforeUpload 	– Hier werden die Dateien verarbeitet, die vom User ausgewählt wurden, bevor diese hochgeladen werden. Z.B. Validierung der Dateigröße etc.
+	\item afterUpload 	- Hier können Dinge mit den Dateien angestellt werden, nachdem diese hochgeladen wurden
+	\item onValidate	- Dieser Hook dient auch hier zur abschließenden Validierung. Z.B. wenn ein Formular submitted wird.
+\end{itemize}
+
+\paragraph{Der Fileuploader} Den Kern soll eine Fileuploader-Klasse bilden. Sie soll für die jeweiligen Input-Felder instanziiert werden und ist für die gesammte Abwicklung, also das Preloading, Hochladen und Entfernen von Dateien, verantwortlich. Außerdem soll sie eine API bereit stellen, mit der man auf Änderungen reagieren und Fehler behandeln kann. Zu den Änderungen zählen Dinge wie die Elemente, die sich im Fileuploader befinden, ob ein Request an der Server durchgeführt wird und wie der Fortschritt ist. Diese Daten sollen in einem sog. Store gespeichert werden.
+
+\paragraph{Der Store} Der Zustand - oder State - einer Fileuploader Instanz soll in einem Store verwaltet werden. Dafür soll die Open Source Bibliothek MobX verwendet werden. MobX beschreibt sich selbst als \glqq simple, scalable state management\grqq{}. Es ist eine sehr weit verbreitete Bibliothek für das State Management in JavaScript und basiert auf dem Functional Reactive Programming Pattern. MobX ist sehr unkomplizert und bedarf kaum Boilerplate-Code.
 
 \subsection{Geschäftslogik}
 \label{sec:Geschaeftslogik}
