--- a/Inhalt/Einleitung.tex
+++ b/Inhalt/Einleitung.tex
@@ -32,13 +32,7 @@ Die Motivation dieses Projektes ist es, ein einheitliches, einfach zu integriere
 
 \subsection{Projektschnittstellen} 
 \label{sec:Projektschnittstellen}
-% TODO
-\begin{itemize}
-	\item Mit welchen anderen Systemen interagiert die Anwendung (technische Schnittstellen)?
-	\item Wer genehmigt das Projekt \bzw stellt Mittel zur Verfügung? 
-	\item Wer sind die Benutzer der Anwendung?
-	\item Wem muss das Ergebnis präsentiert werden?
-\end{itemize}
+Da es sich um eine TYPO3 Extension handelt, verwendet das Projekt dementsprechend intern die APIs die von TYPO3 zur Verfügung gestellt werden. Nach außen stellt das Projekt sowohl im Backend als auch im Frontend für die Entwickler eine API bereit, mit der es in ein Kundenprojekt integriert werden kann. Unter anderen die Konfigurationsschnittstelle, mit der zentral die Konfigurationen verwaltet werden.
 
 
 \subsection{Projektabgrenzung} 
