--- a/Inhalt/Analysephase.tex
+++ b/Inhalt/Analysephase.tex
@@ -6,7 +6,7 @@
 \subsection{Ist-Analyse} 
 \label{sec:IstAnalyse}
 
-Im Rahmen mehrerer Kundenprojekte wurden bereits verschiedene Tools, sowohl OpenSource als auch kommerziell, für das Hochladen von Dateien evaluiert und eingesetzt. Sowohl Backend- als auch Frontendseitig hat sich bisher allerdings keine zufriedenstellende Lösung ergeben. Gründe gehen von fehlenden Features bis unzureichenden Dokumentationen, unregelmäßige Wartungen und schlechte Anpassbarkeit im Backend und Frontend. 
+Im Rahmen mehrerer Kundenprojekte wurden bereits verschiedene Tools, sowohl Open Source als auch kommerziell, für das Hochladen von Dateien evaluiert und eingesetzt. Sowohl Backend- als auch Frontendseitig hat sich bisher allerdings keine zufriedenstellende Lösung ergeben. Gründe gehen von fehlenden Features bis unzureichenden Dokumentationen, unregelmäßige Wartungen und schlechte Anpassbarkeit im Backend und Frontend. 
 
 Backendseitig ist meist auch die Integration in das TYPO3 Ökosystem sehr aufwändig oder muss jedes Mal neu entwickelt werden, was zusätzliche Arbeit und kosten bedeutet. Dazu kommen Security Issues und mangelnde Umsetzung der PSR-Standards.  
 
@@ -15,18 +15,12 @@ Frontendseitig haben sich die bisher getesteten Tools als sehr konfigurationslas
 
 \subsection{Wirtschaftlichkeitsanalyse}
 \label{sec:Wirtschaftlichkeitsanalyse}
-\begin{itemize}
-	\item Lohnt sich das Projekt für das Unternehmen?
-\end{itemize}
+% todo
 
 
 \subsubsection{\gqq{Make or Buy}-Entscheidung}
 \label{sec:MakeOrBuyEntscheidung}
-\begin{itemize}
-	\item Gibt es vielleicht schon ein fertiges Produkt, dass alle Anforderungen des Projekts abdeckt?
-	\item Wenn ja, wieso wird das Projekt trotzdem umgesetzt?
-\end{itemize}
-
+Da bisher keine zufriedenstellende Lösung gefunden wurde, weder Open Source, noch kommerziell und wir als Softwaredienstleister die Möglichkeiten haben das Projekt selbst zu warten und weiter zu entwickeln, wurde auf Eigenentwicklung gesetzt. Damit ist das Projekt außerdem unabhängig von externen Entwicklern. Zudem ermöglicht dies die freie Verwendung in den kommerziellen Kundenprojekten und führt zu einem firmenweiten Standard, was die Wartung der Kundenprojekte, in denen das Tool zum Einsatz kommt deutlich vereinfacht.
 
 \subsubsection{Projektkosten}
 \label{sec:Projektkosten}
